--- a/VirtualForm/demo/index.html
+++ b/VirtualForm/demo/index.html
@@ -62,11 +62,15 @@ $(function () {
     
     $(".vform1 #SUBMIT").click(function () {
         // Submit via variable.
-        vform1.submit("arg1", "arg2");
+        vform1.submit("Variable", "arg1", "arg2");
     });
     $(".vform1 #CALLSUBMIT").click(function () {
         // Submit via event
-        $(this).trigger('callSubmit', ["arg1", "arg2"]);
+        $(this).trigger('callSubmit', ["Event", "arg1", "arg2"]);
+    });
+    $(".vform1 #VARSUBMIT").click(function () {
+        // Submit via widget var
+        myVFrom.submit("WidgetVar", "arg1", "arg2");
     });
     
     log("Start ...");
@@ -75,7 +79,7 @@ $(function () {
 </head>
 <body>
 
-<div class="vform1" onSubmit="var event = arguments[0]; log(event.args, event.values);">
+<div class="vform1" data-var='myVFrom' onSubmit="var event = arguments[0]; log(event.args, event.values);">
     <input type="text"           name="text" value="text"/>
     <input type="hidden"         name="hidden"    value="hidden" />
     <span><input type="checkbox" name="checkbox1" checked="checked" /> checkbox1</span>
@@ -113,6 +117,7 @@ $(function () {
     <span>
         <input type="button" id="SUBMIT" value="SUBMIT" />
         <input type="button" id="CALLSUBMIT" value="CALL SUBMIT" />
+        <input type="button" id="VARSUBMIT" value="VAR SUBMIT" />
     </span>
 </div>
 <div class="log" >
