Form component can be set to automatically call submit.

--- a/VirtualForm/demo/index.html
+++ b/VirtualForm/demo/index.html
@@ -135,7 +135,10 @@ $(function () {
     <span>
         <input type="button" id="SUBMIT" value="SUBMIT" />
         <input type="button" id="CALLSUBMIT" value="CALL SUBMIT" />
+        <br/>
         <input type="button" id="VARSUBMIT" value="VAR SUBMIT" />
+        <!-- Automatically register on clikc and on blur as a submit caller -->
+        <input type="button" id="AUTOSUBMIT" value="AUTO SUBMIT" data-submit-on="click,blur" />
     </span>
 </div>
 
