--- a/VirtualForm/demo/index.html
+++ b/VirtualForm/demo/index.html
@@ -58,9 +58,9 @@ $(function () {
     virtualForm.initModule();
     
     var vform1 = virtualForm.makeForm($("#vform1"));
-    virtualForm.makeForm($("#vform2"), { declareWidgetVar: true });
-    virtualForm.makeForm($("#vform3"), { declareWidgetVar: true });
-    virtualForm.makeForm($("#vform4"), { declareWidgetVar: true });
+    virtualForm.makeForm($("#vform2"), { _declareWidgetVar_: true, extra1 : 'one' });
+    virtualForm.makeForm($("#vform3"), { _declareWidgetVar_: true });
+    virtualForm.makeForm($("#vform4"), { _declareWidgetVar_: true });
     
     $("#vform1 #SUBMIT").click(function () {
         // Submit via variable.
@@ -94,7 +94,7 @@ $(function () {
 });
 
 function onForm2Submit(event) {
-    log("Form2", event.args, event.values);
+    log("Form2", event.args, event.values, event.config);
 };
 </script>
 </head>
